--- a/day_2/index.html
+++ b/day_2/index.html
@@ -16,18 +16,18 @@
 
 		<p>Испытайте себя в условиях Средневековья — приезжайте на Буянов двор, древнерусский хутор на опушке леса. Суровые обитатели двора облачат вас в средневековые одёжи, выдадут оружие и снаряжение, накормят и обучат. </p>
 
-
+	<div class="PosRel">Позиционирование относительное</div>
 	<h2 id="choise-text">Кем быть — решайте сами</h2>
 	Станьте дружинником, стрельцом, ремесленником или следопытом. На хуторе и в лесном лагере вас ждут тренировки с мечами и бердышами, мушкетами и пушками, манёвры, походы, обучение ремеслам и навыкам выживания.
 	<a href="#Bonus">Что вас ждёт?</a>
-		<h3>Дружинник</h3>Дружинник
+		<div class="PosAps"><h3>Дружинник</h3>Дружинник
 		Вступайте в княжью дружину. Могучие гридни научат вас орудовать копьем, мечом, топором и щитом, стрелять из лука и метать дротики-сулицы. Вы будете держать строй щитов и сметать им противника. Вечером ждёт суровое испытание — оно покажет, как вы усвоили воинскую премудрость. 
 		Предлагайте занятия, которые вам интересны — например, подробный рассказ о дружинной культуре и оружии. 
 
 
 			Время: 8 часов
 			Количество участников: до 6 человек
-			стоимость: 10 000 р. с человека. 
+			стоимость: 10 000 р. с человека. </div>
 		<h3>Стрелец</h3>
 		Окунитесь в лихой XVII век, присоединяйтесь к стрелецкому полку! Надевайте кафтан и обвешивайтесь пороховницами — вас научат огневому бою из мушкета и пушки. Бывалый стрелец покажет, как работать в строю бердышом, пикой и саблей. После обеда вас ждёт отливка пуль и помол пороха. Вечером закрепите умения на военных маневрах. 
 
@@ -37,9 +37,7 @@
 			Стоимость: 10 000 р. с человека
 		<h3>Ремесло на Буяновом Дворе</h3>
 		Облачайтесь в порты и рубахи, надевайте кожаный фартук, и вперёд! Наши плотники построили не один хутор, с ними советуются и ученые. Мастера научат вас
-		тесать, рубить чаши, колоть по волокнам брёвна, корить скобелем и стругом, пилить лучковой пилой, сверлить ложковидными сверлами, определять породы деревьев, видеть их сильные и слабые стороны. 
-
-
+		тесать, рубить чаши, колоть по волокнам брёвна, корить скобелем и стругом, пилить лучковой пилой, сверлить ложковидными сверлами, определять породы деревьев, видеть их сильные и слабые стороны.
 			Время: 8 часов
 			Количество участников: до 6 человек
 			Стоимость: 10 000 р. с человека
@@ -50,7 +48,7 @@
 Время: 36 часов. 
 Количество участников: до 6 человек
 Стоимость: 15 000 р. с человека
-Буянов двор 
+<h2>Буянов двор </h2>
 Средневековый хутор наполнен вещами, дышащими стариной. Все строения здесь — копии зданий северной Руси X в. Это тот самый хутор, где прожил полгода герой «Одного в прошлом». Его перевезли на живописную поляну вдали от шума цивилизации. 
 Расположение: Московская область, Клинский район, д. Попелково. 
 
