--- a/pogrujenie/index.html
+++ b/pogrujenie/index.html
@@ -3,8 +3,11 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Погружение</title>
+	<link rel="stylesheet" href="bootstrap.min.css">
 	<link rel="stylesheet" href="style.css">
 	<link href="https://fonts.googleapis.com/css?family=Ruslan+Display&amp;subset=cyrillic" rel="stylesheet">
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+	<script src="bootstrap.min.js"></script>
 </head>
 <body>
 	<div class="wrapper">
@@ -18,42 +21,44 @@
 			<h2>Кем быть — решайте сами</h2>
 			<p>Станьте дружинником, стрельцом, ремесленником или следопытом. На хуторе и в лесном лагере вас ждут тренировки с мечами и бердышами, мушкетами и пушками, манёвры, походы, обучение ремеслам и навыкам выживания.</p>
 		</div>
-		<div class="variant">
-			<h3>Дружинник</h3>
-			<p>Вступайте в княжью дружину. Могучие гридни научат вас орудовать копьем, мечом, топором и щитом, стрелять из лука и метать дротики-сулицы. Вы будете держать строй щитов и сметать им противника. Вечером ждёт суровое испытание — оно покажет, как вы усвоили воинскую премудрость. 
-				Предлагайте занятия, которые вам интересны — например, подробный рассказ о дружинной культуре и оружии. 
-			</p>
-			<p><span>Время: 8 часов
-				Количество участников: до 6 человек
-				стоимость: 10 000 р. с человека. 
-			</span></p>
-		</div>
-		<div class="variant">
-			<h3>Стрелец</h3>
-			<p>Окунитесь в лихой XVII век, присоединяйтесь к стрелецкому полку! Надевайте кафтан и обвешивайтесь пороховницами — вас научат огневому бою из мушкета и пушки. Бывалый стрелец покажет, как работать в строю бердышом, пикой и саблей. После обеда вас ждёт отливка пуль и помол пороха. Вечером закрепите умения на военных маневрах. </p>
-			<p><span>Время: 8 часов
-				Количество участников: до 6 человек
-				Стоимость: 10 000 р. с человек
-			</span></p>
-		</div>
-		<div class="variant">
-			<h3>Ремесло на Буяновом Дворе</h3>
-			<p>Облачайтесь в порты и рубахи, надевайте кожаный фартук, и вперёд! Наши плотники построили не один хутор, с ними советуются и ученые. Мастера научат вас
-				тесать, рубить чаши, колоть по волокнам брёвна, корить скобелем и стругом, пилить лучковой пилой, сверлить ложковидными сверлами, определять породы деревьев, видеть их сильные и слабые стороны. </p>
+		<div class="varint-container">
+			<div class="variant">
+				<h3>Дружинник</h3>
+				<p>Вступайте в княжью дружину. Могучие гридни научат вас орудовать копьем, мечом, топором и щитом, стрелять из лука и метать дротики-сулицы. Вы будете держать строй щитов и сметать им противника. Вечером ждёт суровое испытание — оно покажет, как вы усвоили воинскую премудрость. 
+					Предлагайте занятия, которые вам интересны — например, подробный рассказ о дружинной культуре и оружии. 
+				</p>
+				<p><span>Время: 8 часов
+					Количество участников: до 6 человек
+					стоимость: 10 000 р. с человека. 
+				</span></p>
+			</div>
+			<div class="variant">
+				<h3>Стрелец</h3>
+				<p>Окунитесь в лихой XVII век, присоединяйтесь к стрелецкому полку! Надевайте кафтан и обвешивайтесь пороховницами — вас научат огневому бою из мушкета и пушки. Бывалый стрелец покажет, как работать в строю бердышом, пикой и саблей. После обеда вас ждёт отливка пуль и помол пороха. Вечером закрепите умения на военных маневрах. </p>
 				<p><span>Время: 8 часов
 					Количество участников: до 6 человек
 					Стоимость: 10 000 р. с человек
 				</span></p>
 			</div>
 			<div class="variant">
-				<h3>Исторический поход «Промысловик» (Х век/ XVII век)</h3>
-				<p>Станьте промысловиком под руководством матёрого следопыта. В округе водятся лоси, кабаны, медведи, бобры, а речка знаменита хариусом. В лесном лагере охотники покажут, как строить шалаш, как ставить силки и сети, разжигать костер кресалом, бить рыбу острогой. Что поймаете — сварите тут же в похлёбке по старинному рецепту. </p>
-				<p><span>Время: 36 часов. 
-					Количество участников: до 6 человек
-					Стоимость: 15 000 р. с человека
-				</span></p>
+				<h3>Ремесло на Буяновом Дворе</h3>
+				<p>Облачайтесь в порты и рубахи, надевайте кожаный фартук, и вперёд! Наши плотники построили не один хутор, с ними советуются и ученые. Мастера научат вас
+					тесать, рубить чаши, колоть по волокнам брёвна, корить скобелем и стругом, пилить лучковой пилой, сверлить ложковидными сверлами, определять породы деревьев, видеть их сильные и слабые стороны. </p>
+					<p><span>Время: 8 часов
+						Количество участников: до 6 человек
+						Стоимость: 10 000 р. с человек
+					</span></p>
+				</div>
+				<div class="variant">
+					<h3>Исторический поход «Промысловик» (Х век/ XVII век)</h3>
+					<p>Станьте промысловиком под руководством матёрого следопыта. В округе водятся лоси, кабаны, медведи, бобры, а речка знаменита хариусом. В лесном лагере охотники покажут, как строить шалаш, как ставить силки и сети, разжигать костер кресалом, бить рыбу острогой. Что поймаете — сварите тут же в похлёбке по старинному рецепту. </p>
+					<p><span>Время: 36 часов. 
+						Количество участников: до 6 человек
+						Стоимость: 15 000 р. с человека
+					</span></p>
+				</div>
 			</div>
-			<div>
+			<div class="place-banner">
 				<h2>Буянов двор</h2>
 				<p>Средневековый хутор наполнен вещами, дышащими стариной. Все строения здесь — копии зданий северной Руси X в. Это тот самый хутор, где прожил полгода герой «Одного в прошлом». Его перевезли на живописную поляну вдали от шума цивилизации. 
 					Расположение: Московская область, Клинский район, д. Попелково. 
@@ -65,20 +70,21 @@
 					<li>Обед из историчных блюд, приготовленных на огне. Сопровождается экскурсом в средневековую кулинарию.</li>
 				</ul>
 			</div>
-			<div>
+			<div class="banya-banner">
 				<h2>Баня</h2>
 				<p>На хуторе можно попариться в баньке. Разумеется, «по-чёрному», ведь вы в Древней Руси! Топите печь-каменку, вдыхайте ароматы бревенчатых стен и душистых трав, хлещитесь дубовыми вениками, как предки завещали. Дым и жар выгонят всю хворь! </p>
 			</div>
-			<div>
-				<h2>Дополнительные услуги</h2>
+			<h2>Дополнительные услуги</h2>
+			<div class="dop-options">
+				
 				<div>Доставка на место
-				Если лень вести машину или ехать на электричке — доставим вас на «Буянов двор» сами.
+					Если лень вести машину или ехать на электричке — доставим вас на «Буянов двор» сами.
 				</div>
-				<div>Фотосессия
+				<div> <h4>Фотосессия</h4>
 					Фотограф-профессионал запечатлеет вас в образе. В течение недели он предоставит серию обработанных фотографий 
 				</div>
-				<div>Переводчик
-					Иностранцы — желанные гости! Для них выпишем толмача из посольского приказа. </div>
+				<div> <h4>Переводчик</h4>
+					Иностранцы — желанные гости! Для них выпишем толмача из посольского приказа.
 				</div>
 				<div>Лошадь с инструктором
 					Умеете ездить верхом и желаете в конный поход? Средневековый всадник проведёт вас по захватывающему маршруту.
@@ -86,9 +92,10 @@
 				<div>Мастер-классы под заказ
 					Ваша группа больше шести человек? Не нашлось занятия по душе? Хотите что-то изменить в программе? Предлагайте, мы всё устроим!
 				</div>
-				<div class="anton"><h2>Антон</h2>
-					<p>Телефон: +7-985-335-53-05 и почта: ANTON@RATOBOR.COM
-						и ссылка на презентацию</p>
+			</div>
+			<div class="anton"><h2>Антон</h2>
+				<p>Телефон: +7-985-335-53-05 и почта: ANTON@RATOBOR.COM
+					и ссылка на презентацию</p>
 				</div>
 				<footer><p>телефон:8 495 215-29-26
 					адрес офиса: ул. Правды 24с3
@@ -96,5 +103,5 @@
 				</footer>
 			</div>
 
-</body>
-</html>
+		</body>
+		</html>
